Changed the initial interface with the library; Returning the TCP server before the call to .listen(), so that the user can listen for error events

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "node": ">=6"
   },
   "dependencies": {
-    "readable-stream": "^2.3.0"
+    "readable-stream": "^2.3.0",
+    "verror": "^1.10.0"
   },
   "devDependencies": {
     "expect.js": "*",
