--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "author": "Sergey Dmitriev <serge.dmitriev@gmail.com>",
   "name": "ding-dong",
+  "license": "MIT",
   "description": "Write AGI-server quickly! (AGI - Asterisk Gateway Interface)",
-  "version": "0.1.7",
+  "version": "1.0.0",
   "repository": {
     "type": "git",
     "url": "git://github.com/antirek/ding-dong.git"
